--- a/i18n/zh-cn/package.i18n.json
+++ b/i18n/zh-cn/package.i18n.json
@@ -2,9 +2,9 @@
     "markdown-image-manage.menuName": "图片管理",
     "markdown-image-manage.menuAnalyze": "分析",
     "markdown-image-manage.menuClean": "清理",
-    "markdown-image-manage.menuDownload": "下载",
+    "markdown-image-manage.menuDownload": "下载全部",
     "markdown-image-manage.menuUpload": "上传所选图片",
-    "markdown-image-manage.menuUploadAll": "上传全部图片",
+    "markdown-image-manage.menuUploadClip": "上传剪切板",
     "markdown-image-manage.menuMove": "移动",
     
     "markdown-image-manage.removeFolder": "清理时图片移动的目标文件夹",
