--- a/i18n/zh-cn/package.i18n.json
+++ b/i18n/zh-cn/package.i18n.json
@@ -8,10 +8,10 @@
     "markdown-image-manage.menuUploadClip": "上传剪切板",
     "markdown-image-manage.menuMove": "移动本地图片",
     
-    "markdown-image-manage.removeFolder": "清理时图片移动的目标文件夹",
+    "markdown-image-manage.removeFolder": "本地图片目录清理时，其他图片移动的目标文件夹",
     "markdown-image-manage.hasBracket": "图片路径中是否包括右括号",
-    "markdown-image-manage.imageSaveFolder": "图片要保存到的位置,默认以md文件名做文件夹，支持绝对路径和相对路径",
-    "markdown-image-manage.updateLink": "上传/下载/移动是否需要更新md文件的图片链接",
+    "markdown-image-manage.imageSaveFolder": "图片要保存到的位置,默认以md文件名做文件夹，支持绝对路径和相对路径，支持文件名<filename>和日期<YYYYMMDD>变量(dayjs)",
+    "markdown-image-manage.updateLink": "上传/下载/移动时是否需要更新md文件的图片链接",
     "markdown-image-manage.rename": "上传/下载/移动图片时是否需要重命名图片",
-    "markdown-image-manage.remotePath": "图床上需要添加的远程路径，默认为空。为空时表示在图床上建立以md文件名的目录 ，以区分不同md文件的图片，用 / 或\\ 时表示直接不添加目录，也可自定义其他目录名。 "
+    "markdown-image-manage.remotePath": "图床上需要添加的远程路径，可区分不同md文件的图片，支持文件名<filename>和日期<YYYYMMDD>变量(dayjs)。 "
 }
