feat: 添加匹配尖括号格式图片链接的功能 fix: 修复图片文件带有大写字母时会被错误地清理的问题

--- a/i18n/zh-cn/package.i18n.json
+++ b/i18n/zh-cn/package.i18n.json
@@ -13,6 +13,7 @@
     
     "markdown-image-manage.removeFolder": "本地图片目录清理时，其他图片移动的目标文件夹",
     "markdown-image-manage.hasBracket": "图片路径中是否包括右括号",
+    "markdown-image-manage.matchAngleBrackets": "是否匹配尖括号格式的图片链接",
     "markdown-image-manage.imageSaveFolder": "图片要保存到的位置,默认以md文件名做文件夹，支持绝对路径和相对路径，支持文件名<filename>和日期<YYYYMMDD>变量(dayjs)",
     "markdown-image-manage.updateLink": "上传/下载/移动时是否需要更新md文件的图片链接",
     "markdown-image-manage.skipSelectChange": "当光标或选择范围改变后是否依然更新图片链接",
