初步添加复制本地文件的功能 尝试添加按格式进行文件重命名

--- a/i18n/zh-cn/package.i18n.json
+++ b/i18n/zh-cn/package.i18n.json
@@ -7,6 +7,7 @@
     "markdown-image-manage.menuUpload": "MIM:上传所选图片",
     "markdown-image-manage.menuUploadClip": "MIM:上传剪切板",
     "markdown-image-manage.menuMove": "MIM:移动本地图片",
+    "markdown-image-manage.menuCopy": "MIM:复制本地图片",
     "markdown-image-manage.menuClipImage":  "MIM:插入剪切板图片",
     "markdown-image-manage.menuConvertFormat": "MIM:转变所选格式",
     "markdown-image-manage.menuConvertLink": "MIM:所选路径相对<->绝对",
@@ -17,7 +18,7 @@
     "markdown-image-manage.imageSaveFolder": "图片要保存到的位置,默认以md文件名做文件夹，支持绝对路径和相对路径，支持文件名<filename>和日期<YYYYMMDD>变量(dayjs)",
     "markdown-image-manage.updateLink": "上传/下载/移动时是否需要更新md文件的图片链接",
     "markdown-image-manage.skipSelectChange": "当光标或选择范围改变后是否依然更新图片链接",
-    "markdown-image-manage.rename": "上传/下载/移动图片时是否需要重命名图片",
+    "markdown-image-manage.rename": "上传/下载/移动/复制图片时是否需要重命名图片",
     "markdown-image-manage.remotePath": "图床上需要添加的远程路径，可区分不同md文件的图片，支持文件名<filename>和日期<YYYYMMDD>变量(dayjs)。 ",
     "markdown-image-manage.downloadTimeout": "每张图片下载的超时秒数",
     "markdown-image-manage.uploadTimeout": "每张图片上传的超时秒数",
